--- a/checks/example2.yaml
+++ b/checks/example2.yaml
@@ -1,21 +1,15 @@
 web_checks:
-  - name: vault
-    url: vault.wvservices.com:8200/ui/
-    scheme: https
-    method: get
-    timeout: 5s
-    update_interval: 15s
   - name: web3tech.ru
     url: web3tech.ru
     scheme: https
     method: get
     timeout: 15s
-    update_interval: 40s
+    update_interval: 1m
   - name: postman post
     url: postman-echo.com/post
     scheme: https
     method: post
-    timeout: 15s
+    timeout: 150s
     postfields: text=super&pass=oops&user=lamer
 port_checks:
   - name: mainnet-aws-fr-2.wavesnodes.com data port
@@ -28,5 +22,5 @@ port_checks:
     host: mainnet-aws-fr-1.wavesnodes.com
     port: 6869
     timeout: 25s
-    update_interval: 30s
+    update_interval: 5m
 
