--- a/checks/example1.yaml
+++ b/checks/example1.yaml
@@ -19,13 +19,13 @@ web_checks:
     scheme: http
     update_interval: 30
 port_checks:
-  - name: mainnet-aws-fr-1.wavesnodes.com data port
+  - name: mainnet-aws-fr-1.wavesnodes.com data tcp
     host: mainnet-aws-fr-1.wavesnodes.com
     port: 6868
     protocol: tcp
     connection_timeout: 3s
     update_interval: 5m
-  - name: mainnet-aws-fr-1.wavesnodes.com api port
+  - name: mainnet-aws-fr-1.wavesnodes.com api tcp
     host: mainnet-aws-fr-1.wavesnodes.com
     port: 6869
     connection_timeout: 15s
