--- a/checks/example2.yaml
+++ b/checks/example2.yaml
@@ -12,14 +12,21 @@ web_checks:
     method: post
     postfields: text=super&pass=oops&user=lamer
 port_checks:
-  - name: mainnet-aws-fr-2.wavesnodes.com data port
+  - name: mainnet-aws-fr-2.wavesnodes.com data tcp
     host: mainnet-aws-fr-2.wavesnodes.com
     port: 6868
     protocol: tcp
     update_interval: 1m
-  - name: mainnet-aws-fr-1.wavesnodes.com api port
+  - name: mainnet-aws-fr-1.wavesnodes.com api udp
     host: mainnet-aws-fr-1.wavesnodes.com
     port: 6869
-    connection_timeout: 25s
+    protocol: udp
+    connection_timeout: 10s
     update_interval: 5m
+  - name: localhost tcp
+    host: 127.0.0.1
+    port: 8000
+    protocol: tcp
+    connection_timeout: 1s
+    update_interval: 30s
 
